hphp/hack/test/typecheck/constraints/where_override_bad.php.exp
File "where_override_bad.php", line 16, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "where_override_bad.php", line 16, characters 45-51:
  Expected `Derived`
  File "where_override_bad.php", line 16, characters 40-40:
  But got `T as Base`
